# stockbot

./: .gitmodules  CMakeLists.txt
src/: app.cpp  app.h  autoInvestment.cpp  autoInvestment.h  command.h  discordBot.cpp  discordBot.h  investmentManager.cpp  investmentManager.h  main.cpp  stockBot.cpp  stockBot.h  taskManager.cpp  taskManager.h
src/buffer/: equityDataBuffer.cpp  equityDataBuffer.h  streamDataBuffer.cpp  streamDataBuffer.h
src/command/: command.h
src/utils/: concurrentQueue.h  logger.cpp  logger.h  utils.cpp  utils.h
